--- a/src/app/mom/mobd/mobd.component.html
+++ b/src/app/mom/mobd/mobd.component.html
@@ -4,7 +4,6 @@
 
 <input nz-input [(ngModel)]="text">
 
-<smarthelp  [visible]="visible" (onOk)="afterHelp($event)"
-            (onCancel)="visible=false;" [url]="'http://212.64.2.48:8899/grid'"  [columnUrl]="'http://212.64.2.48:8899/column'" [method]="'GET'"></smarthelp>
-
+<smarthelp  [visible]="visible" (onOk)="afterHelp($event)"  [title]="'军工帮助'"
+             (onCancel)="visible=false;" [url]="'http://212.64.2.48:8899/grid'"  [method]="'GET'"></smarthelp>
 
