--- a/src/help.less
+++ b/src/help.less
@@ -1,7 +1,15 @@
-#helpModal{
-  .ant-modal{
-    width:max-content !important;
-    max-width: 85%;
-    top:5%;
+
+.help-modal{
+  .ant-modal {
+    width: max-content !important;
+    max-width: 80%;
+    min-width: 400px;
+    top: 5%;
   }
+
+  .ant-table-thead > tr > th, .ant-table-tbody > tr > td {
+    word-break: break-all;
+    -ms-word-break: break-all;
+  }
+
 }
