--- a/src/theme.less
+++ b/src/theme.less
@@ -1,3 +1,12 @@
 @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 
 
+.ant-table-thead > tr > th,
+.ant-table-tbody > tr > td {
+  word-break: break-all;
+  -ms-word-break: break-all;
+}
+
+.ant-table-tbody table{
+
+}
