动态查询条件

--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -27,7 +27,7 @@ Demo功能演示
   [tree]="true"
   [title]="'快捷帮助'"
   [visible]="visible"
-  [id]="'number'"
+  [id]="'code'"
   [url]="http.url.gridUrl"
   (onCancel)="visible=false;"
   (onOk)="afterHelp($event)">
