--- a/src/app/share/querylist/template/selecttemplate/selecttemplate.component.html
+++ b/src/app/share/querylist/template/selecttemplate/selecttemplate.component.html
@@ -3,10 +3,7 @@
     <nz-form-label [nzSm]="6"  [nzXs]="20">{{item.name}}</nz-form-label>
     <nz-form-control  [nzSm]="16" [nzXs]="20">
       <nz-select nzAllowClear  [(ngModel)]="item.content">
-        <nz-option nzValue="" nzLabel="请选择"></nz-option><!--TODO:多语--->
-        <nz-option nzValue="jack" nzLabel="Jack"></nz-option>
-        <nz-option nzValue="lucy" nzLabel="Lucy"></nz-option>
-        <nz-option nzValue="disabled" nzLabel="Disabled"></nz-option>
+        <nz-option *ngFor="let d of data" [nzValue]="d.value" [nzLabel]="d.label"></nz-option>
       </nz-select>
     </nz-form-control>
   </nz-form-item>
