--- a/src/theme.less
+++ b/src/theme.less
@@ -7,6 +7,18 @@
   -ms-word-break: break-all;
 }
 
-.ant-table-tbody table{
+.ant-btn {
+  margin-right: 8px;
+}
 
+.tb-search-header {
+  padding: 8px;
+}
+
+.ant-form {
+  padding: 8px !important;
+}
+
+.ant-input-search-button{
+  margin-right: 0;
 }
