--- a/src/app/share/querylist/template/selecttemplate/selecttemplate.component.html
+++ b/src/app/share/querylist/template/selecttemplate/selecttemplate.component.html
@@ -3,7 +3,7 @@
     <nz-form-label [nzSm]="6"  [nzXs]="20">{{item.name}}</nz-form-label>
     <nz-form-control  [nzSm]="16" [nzXs]="20">
       <nz-select nzAllowClear  [(ngModel)]="item.content">
-        <nz-option *ngFor="let d of data" [nzValue]="d.value" [nzLabel]="d.label"></nz-option>
+        <nz-option *ngFor="let d of data" [nzValue]="d" [nzLabel]="d.label"></nz-option>
       </nz-select>
     </nz-form-control>
   </nz-form-item>
