--- a/src/query.less
+++ b/src/query.less
@@ -11,7 +11,7 @@
 .query-btns {
   text-align: right;
   a {
-    margin-right: 16px;
+    margin-left: 16px;
   }
   a:hover{
     color: @primary-color !important;
