--- a/src/app/share/querylist/querylist.component.less
+++ b/src/app/share/querylist/querylist.component.less
@@ -1,5 +1,5 @@
 .query-list {
-  padding: 8px !important;
+  padding: 8px 8px 0 8px !important;
   a {
     color: rgba(0,0,0,.85);
     font-size: 14px;
