--- a/src/query.less
+++ b/src/query.less
@@ -11,9 +11,22 @@
 .query-btns {
   text-align: right;
   a {
-    margin-left: 16px;
+    margin-left: 8px;
   }
   a:hover{
     color: @primary-color !important;
   }
+}
+
+.query-title:hover{
+  a {
+    color: @primary-color !important;
+  }
+}
+.query-title{
+  width: max-content;
+}
+
+.primary-color{
+  color:@primary-color !important;
 }
