--- a/src/app/share/querylist/template/rangepickertemplate/rangepickertemplate.component.html
+++ b/src/app/share/querylist/template/rangepickertemplate/rangepickertemplate.component.html
@@ -1,8 +1,8 @@
-<div nz-col [nzSpan]="6" [hidden]="hidden">
+<div [hidden]="hidden" [nzSpan]="6" nz-col>
   <nz-form-item nzFlex>
-    <nz-form-label  [nzSm]="6"  [nzXs]="20">{{item.name}}</nz-form-label>
-    <nz-form-control  [nzSm]="16" [nzXs]="20">
-      <nz-range-picker  [(ngModel)]="item.content" ></nz-range-picker>
+    <nz-form-label nzXXl="6" nzXl="6" nzLg="6" nzMd="6" nzSm="12" nzXs="18">{{item.name}}</nz-form-label>
+    <nz-form-control nzXXl="18" nzXl="18" nzLg="18" nzMd="18" nzSm="12" nzXs="6">
+      <nz-range-picker [(ngModel)]="item.content"></nz-range-picker>
     </nz-form-control>
   </nz-form-item>
 </div>
