--- a/src/help.less
+++ b/src/help.less
@@ -1,10 +1,17 @@
+@import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 
 .help-modal{
   .ant-modal {
     width: max-content !important;
-    max-width: 80%;
+    max-width: 60%;
     min-width: 400px;
+    min-height: 240px;
+    max-height: 80%;
     top: 5%;
+  }
+
+  .ant-modal-body{
+    padding: 16px 16px 0 16px !important;
   }
 
   .ant-table-thead > tr > th, .ant-table-tbody > tr > td {
@@ -12,4 +19,22 @@
     -ms-word-break: break-all;
   }
 
+  .ant-modal-footer{
+    padding:8px;
+    text-align: center;
+    .ant-btn{
+      width:120px;
+    }
+  }
+
+  .ant-modal-header{
+    padding:16px;
+  }
+}
+
+.selected-tr{
+  td{
+    background-color:@primary-1 !important;
+  }
+  background-color:@primary-1;
 }
