基础流程图组件

--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -21,9 +21,8 @@ Demo功能演示
   [backgroundColor]="'#fafafa'"
   [url]="http.url.gridUrl"
 ></querylist>
+
 <app-demohelp>
-
-
 </app-demohelp>
 
 
@@ -39,3 +38,4 @@ Demo功能演示
   (onOk)="afterHelp($event)">
 </smarthelp>
 
+<workflow [DataSource]="data"></workflow>
