--- a/src/theme.less
+++ b/src/theme.less
@@ -27,3 +27,20 @@
   padding:0 !important;
 }
 
+.selected-tr{
+  td{
+    background-color:@primary-1 !important;
+  }
+  background-color:@primary-1;
+}
+
+.ant-form-item{
+  margin-bottom:8px;
+}
+
+
+// vertical paddings
+@padding-lg: 16px; // containers
+@padding-md: 16px; // small containers and buttons
+@padding-sm: 12px; // Form controls and items
+@padding-xs: 8px; // small items
