--- a/src/app/share/querylist/template/helptemplate/helptemplate.component.html
+++ b/src/app/share/querylist/template/helptemplate/helptemplate.component.html
@@ -1,13 +1,13 @@
 <div [hidden]="hidden" [nzSpan]="6" nz-col>
   <nz-form-item nzFlex>
-    <nz-form-label  nzXXl="6" nzXl="6" nzLg="6" nzMd="6" nzSm="12" nzXs="18">{{item.name}}</nz-form-label>
-    <nz-form-control nzXXl="18" nzXl="18" nzLg="18" nzMd="18" nzSm="12" nzXs="6">
-      <nz-input-group  (click)="openHelp()" [nzAddOnAfter]="suffixIconButton" nzSearch>
+    <nz-form-label nzLg="6" nzMd="6" nzSm="12" nzXXl="6" nzXl="6" nzXs="18">{{item.name}}</nz-form-label>
+    <nz-form-control nzLg="18" nzMd="18" nzSm="12" nzXXl="18" nzXl="18" nzXs="6">
+      <nz-input-group (click)="openHelp()" [nzAddOnAfter]="suffixIconButton" nzSearch>
         <input [(ngModel)]="item.content['name']" nz-input readonly type="text"/>
       </nz-input-group>
       <ng-template #suffixIconButton>
-        <button nz-button nzSearch nzType="primary" type="button"><i nz-icon
-                                                                                          nzType="search"></i>
+        <button nz-button nzSearch nzType="primary" type="button">
+          <i nz-icon nzType="search"></i>
         </button>
       </ng-template>
     </nz-form-control>
