--- a/src/app/share/workflow/workflow.component.html
+++ b/src/app/share/workflow/workflow.component.html
@@ -1,2 +1,3 @@
 <div #jointdiv id="jointdiv"></div>
 
+<nz-spin nzSimple [nzSize]="'large'" [ngStyle]="{'display':loading?'block':'none','height':'100%'}"></nz-spin>
