--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -38,5 +38,5 @@ Demo功能演示
   (onOk)="afterHelp($event)">
 </smarthelp>
 
-<workflow [TreeData]="tree" [DataSource]="data" [boxHeight]="60" radius="30" (blockClick)="showNode($event)"></workflow>
+<workflow [TreeData]="tree"  [DataSource]="data"  (blockClick)="showNode($event)"></workflow>
 
